# wirenec-meta-optimization

./: .gitignore  README.md  pyproject.toml
wirenec_optimization/: optimize.py
wirenec_optimization/configs/: multi_seed_experiment.yaml  single_layers_experiment.yaml  single_spatial_experiment.yaml
wirenec_optimization/experiment/: __init__.py  base_experiment.py  multi_seed_optimization_experiment.py  results_processing.py  single_optimization_experiment.py
wirenec_optimization/export_utils/: utils.py
wirenec_optimization/optimization_utils/: cmaes_optimizer.py  visualization.py
wirenec_optimization/parametrization/: Two graphics.py  base_parametrization.py  conformal_parametrization.py  layers_parametrization.py  sample_objects.py  spatial_parametrization.py
wirenec_optimization/results_processing/: __init__.py  results_processing.py
