[tool.poetry]
name = "wirenec-meta-optimization"
version = "0.1.0"
description = ""
authors = ["konstantgr <konstantin.grotov@gmail.com>"]
readme = "README.md"
packages = [
    {include = "wirenec_optimization"},
    {include = "parametrization"},
    {include = "optimization_utils"},
    {include = "export_utils"}
]

[tool.poetry.dependencies]
python = "^3.11"
wirenec = {git = "https://github.com/konstantgr/WireNEC"}
matplotlib = "^3.6.2"
cmaes = "^0.9.0"
tqdm = "^4.64.1"
scipy = "^1.9.3"
bayesianoptimization = "^0.0.0"
bayesian-optimization = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
